fixed wrong newpage

--- a/move_base.tex
+++ b/move_base.tex
@@ -32,7 +32,7 @@ Das Move\_Base-Paket stellt dadurch einen essentiellen Teil des nav\_cores in RO
 Aufgrund der steigenden Komplexität in Robotersystemen möchte man die verschiedenen Teilaufgaben gemäß moderner Softwareentwicklungsverfahren gestalten bzw. wie in der objektorientierten Softwareentwicklung einer Instanz des Systems eine Aufgabe erteilen, die sich dann um die Erfüllung (oder Scheiterung) dieser Aufgabe kümmert.\\
 Durch eine geschickte Gestaltung der verschiedenen Softwarekomponenten erhält man eine einfache Wart- und Erweiterbarkeit des Systems, die sich in einem Robotersystem so äußern könnte dass man einem Teil der Software mitteilt dass man ein bestimmtes Ziel erreichen möchte und dieses Ziel dann von diesem Teil erfüllt wird.\\
 Dies ermöglicht die Move\_Base, in dem ihr mittels ROS-Message ein Ziel in Form einer geometry\_msgs/PoseStamped Nachricht vermittelt wird, welches Ziel zu erreichen ist. Nachfolgend wird im Detail erklärt, welche Komponenten dabei wichtige Rollen spielen.
-\newpage
+%\newpage
 \section{Komponenten}
 Move\_base besteht aus folgenden Komponenten: \cite{moveBase}
 \begin{figure}
